# bdo-coupon-bot

./: .gitignore  DOCKERFILE  Dockerfile  README.md  TODO.md  docker-compose.yml  launch.sh  pyproject.toml  requirements.txt  update.sh
bdo_coupon_bot/: __main__.py  db.py  debuggable_bot.py  discord_bot.py  scanner_bot.py  utils.py
bdo_coupon_bot/codes/: scanner.py
bdo_coupon_bot/cogs/: scanner_cog.py  utils.py
bdo_coupon_bot/commands/: scanner_commands.py
bdo_coupon_bot/db/: __init__.py  coupons.py  subscribers.py  transaction.py
bdo_coupon_bot/services/codes/: scanner.py
bdo_coupon_bot/services/db/: __init__.py  transaction.py
bdo_coupon_bot/services/db/tables/: coupons.py  subscribers.py
src/: db.py  discord_bot.py  main.py
