[tool.poetry]
name = "bdo-coupon-bot"
description = 'A Discord bot that searches for Black Desert coupons.'
readme = "README.md"
license = "MIT"
version = "1.0.0"
authors = ["Frederik P. <frepbh@gmail.com>"]
include = ["launch.sh", "pyproject.toml", "poetry.lock", "discord_token"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10 <4.0"
aiohttp = "^3.13.2"
discord-py = "^2.6.4"
bdo-coupon-scanner = { git = "https://github.com/F0903/bdo-coupon-scanner" }
